--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "GameEngine/vendor/GLFW"]
 	path = GameEngine/vendor/GLFW
 	url = https://github.com/DanielRadu14/glfw
+[submodule "GameEngine/vendor/glm"]
+	path = GameEngine/vendor/glm
+	url = https://github.com/g-truc/glm
