--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -69,9 +69,6 @@
     <ClInclude Include="src\GameEngine\LayerStack.h">
       <Filter>src\GameEngine</Filter>
     </ClInclude>
-    <ClInclude Include="src\GameEngine\Window.h">
-      <Filter>src\GameEngine</Filter>
-    </ClInclude>
     <ClInclude Include="vendor\glm\glm\common.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
@@ -1320,7 +1317,10 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
-    <ClInclude Include="src\GameEngine\WindowsWindow.h">
+    <ClInclude Include="src\GameEngine\WindowInterface.h">
+      <Filter>src\GameEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GameEngine\Window.h">
       <Filter>src\Platform\Windows</Filter>
     </ClInclude>
   </ItemGroup>
@@ -1334,7 +1334,7 @@
     <ClCompile Include="src\GameEngine\LayerStack.cpp">
       <Filter>src\GameEngine</Filter>
     </ClCompile>
-    <ClCompile Include="src\GameEngine\WindowsWindow.cpp">
+    <ClCompile Include="src\GameEngine\Window.cpp">
       <Filter>src\Platform\Windows</Filter>
     </ClCompile>
   </ItemGroup>
