--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -1325,6 +1325,7 @@
     </ClInclude>
     <ClInclude Include="src\GameEngine\GPU\Shader.h" />
     <ClInclude Include="src\GameEngine\GPU\Mesh.h" />
+    <ClInclude Include="src\GameEngine\GPU\Renderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\GameEngine\Application.cpp">
@@ -1341,5 +1342,6 @@
     </ClCompile>
     <ClCompile Include="src\GameEngine\GPU\Shader.cpp" />
     <ClCompile Include="src\GameEngine\GPU\Mesh.cpp" />
+    <ClCompile Include="src\GameEngine\GPU\Renderer.cpp" />
   </ItemGroup>
 </Project>
